// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/tooltip/LeftSidebarLinkCallout render() should hide callout when isShown state is false 1`] = `
<d
  attachment="middle left"
  classPrefix="nav-link-callout"
  enabled={false}
  renderElement={[Function]}
  renderTarget={[Function]}
  targetAttachment="middle right"
/>
`;

exports[`components/tooltip/LeftSidebarLinkCallout render() should render default component 1`] = `
<d
  attachment="middle left"
  classPrefix="nav-link-callout"
  enabled={true}
  renderElement={[Function]}
  renderTarget={[Function]}
  targetAttachment="middle right"
/>
`;
